--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" layout:decorate="~{layout}">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div layout:decorate="~{layout}" class="container my-3">
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
     <!-- 질문 -->
     <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
     <div class="card my-3">
@@ -40,5 +34,4 @@
         <input type="submit" value="답변등록" class="btn btn-primary my-2">
     </form>
 </div>
-</body>
 </html>
